# gpo-lens

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
breadcrumbs/active/: admin-template-configured-value.md  admx-dir-consistent-errors.md  changelog-over-time.md  conflicts-rollup-perf-cache.md  coverage-ci-gate.md  dashboard-findings-filtering.md  delegation-audit-deep-dive.md  dispatch-param-validation.md  estate-doc-export.md  estate-wide-delegation-view.md  estate-wide-settings-search.md  gpo-detail-page-scope-caveats.md  in-app-export.md  pagination-large-estates.md  post-tier1-spec-docs.md  report-db-shadow.md  resultant-view-cse-filter.md  settings-diff-pipeline.md  spec-drift.md  toml-rules-malformed-entry-crash.md  web-app-monolith.md
breadcrumbs/resolved/: admx-dir-consistent-errors.md  admx-protocol-class.md  arch-boundary-catalog-incomplete.md  baseline-diff-llm-routable-path.md  changelog-over-time.md  coverage-ci-gate.md  dashboard-findings-filtering.md  delegation-audit-deep-dive.md  dispatch-param-validation.md  estate-doc-export.md  estate-wide-delegation-view.md  gpo-detail-page-scope-caveats.md  in-app-export.md  loopback-mode-parser.md  minor-followups-perf-and-calibration.md  pagination-large-estates.md  post-tier1-spec-docs.md  queries-god-module.md  report-db-shadow.md  sddl-ms16-072-predicate-duplication.md  settings-diff-pipeline.md  spec-drift.md  store-schema-version-stamp.md  toml-rules-malformed-entry-crash.md  web-app-monolith.md  web-db-connection-lifecycle.md
deploy/iis/: README.md  web.config
docs/: publication-review.md  tier1-normalized-model.md
docs/design/: multi-domain-forest.md  per-user-rsop.md
docs/spec/: export-format.md  json-contract.md  wi_authz.md  wi_cli.md  wi_danger.md  wi_events.md  wi_ingest.md  wi_merge.md  wi_narration.md  wi_paths.md  wi_queries.md  wi_query_dispatch.md  wi_registry_pol.md  wi_sinks.md  wi_snapshot_diff.md  wi_store.md  wi_topology.md  wi_trend.md
githooks/: pre-commit
plans/: 007-tier25-topology-and-hygiene.md  008-baseline-diff-framework.md  009-som-resolution-deep-view.md  010-capability-roadmap.md  011-remediation-and-scope-honesty.md  012-local-web-ui.md  013-scope-honesty-and-consolidation.md  014-site-linked-gpos.md  015-coverage-reconciliation.md  016-splunk-change-attribution.md  017-directory-search-and-scoping.md  018-admx-policy-names-and-dangerous-config-detectors.md  019-scope-resultant-and-gate-attribution.md  020-principal-resolution.md  021-snapshot-rsop-and-merge-model.md  022-web-responsiveness-and-pattern-consolidation.md  023-web-reimagining.md  024-finding-identity-lifecycle-and-triage.md  025-question-oriented-ia-and-exports.md  026-gpo-studio-interoperability-and-independent-verification.md  027-road-to-generous-1x.md
reflections/: 2026-06-05-kimi-k2p6-turbo.md  2026-06-05-umans-glm-5-1.md  2026-06-06-umans-kimi-k2.6-cleanup.md  2026-06-06-umans-kimi-k2.6-take2.md  2026-06-06-umans-kimi-k2.6.md  2026-06-09-glm-5-1-2.md  2026-06-09-glm-5-1-3.md  2026-06-09-glm-5-1.md  2026-06-09-mimo-v2.5-pro.md  2026-06-10-glm-5-1-4.md  2026-06-10-glm-5-1-5.md  2026-06-10-glm-5-1-6.md  2026-06-10-glm-5-1-7.md  2026-06-10-glm-5-1-8.md  2026-06-10-kimi-k2.6.md  2026-06-11-glm-5-1.md  2026-06-12-mimo-v2.5-pro-hardening.md  2026-06-12-mimo-v2.5-pro.md  2026-06-13-glm-5-2.md  2026-06-16-glm-5-2-2.md  2026-06-16-glm-5-2.md  2026-06-17-glm-5-2-2.md  2026-06-17-glm-5-2-3.md  2026-06-17-glm-5-2.md  2026-06-18-glm-5-2-2.md  2026-06-18-glm-5-2-3.md  2026-06-18-glm-5-2.md  2026-06-19-glm-5-2.md  2026-06-19-mimo-v2-5-pro.md  2026-06-20-mimo-v2-5-pro-2.md  2026-06-20-mimo-v2-5-pro.md  2026-06-20-minimax-m3.md  2026-06-22-glm-5-2-2.md  2026-06-22-glm-5-2.md  2026-06-23-glm-5-2-2.md  2026-06-23-glm-5-2.md  2026-06-24-glm-5-2-2.md  2026-06-24-glm-5-2.md  2026-06-25-glm-5-2-2.md  2026-06-25-glm-5-2-3.md  (+13 more)
scripts/: Export-GpoEstate.ps1  Export-GroupMembers.ps1  Export-Principals.ps1  check_committed_identifiers.py  install-git-hooks.sh  install-windows.ps1  uninstall-windows.ps1
src/gpo_lens/: __init__.py  __main__.py  admx_parser.py  authz.py  cli.py  danger.py  danger_rules.toml  detection.py  display.py  events.py  finding_model.py  findings.py  ingest.py  merge.py  model.py  narration.py  normalize.py  paths.py  queries.py  query_dispatch.py  registry_pol.py  report.py  sinks.py  snapshot_diff.py  store.py  topology.py  trend.py
tests/: _arch.py  _helpers.py  conftest.py  test_admx_parser.py  test_api.py  test_ask_routes.py  test_authz.py  test_calibration.py  test_check_identifiers.py  test_cli.py  test_cli_admx_coverage.py  test_cli_delegation.py  test_cli_diff.py  test_cli_estate_coverage.py  test_cli_events.py  test_cli_golden_diff.py  test_cli_json_shadowing.py  test_cli_resultant_report.py  test_cli_topology_coverage.py  test_coverage.py  test_csrf.py  test_danger.py  test_datetime_guard.py  test_detection_resilience.py  test_display.py  test_events.py  test_findings.py  test_findings_inbox.py  test_fixture_estate.py  test_fixture_guid_lint.py  test_fixtures.py  test_forwarded_proto.py  test_golden_estate.py  test_ingest.py  test_json_contract.py  test_ledger.py  test_loopback_awareness.py  test_merge.py  test_narration.py  test_narration_integration.py  (+30 more)
tests/fixtures/: AllGPOs.xml  build_fixture.py  gp-inheritance.json  gpo-metadata.json  ou-tree.json  sites.json  wmi-filters.json
tests/golden_estate/: AllGPOs.xml  build_golden.py  collection-errors.json  gp-inheritance.json  (+4 more)
(+98 files in other folders)
