[project]
name = "gpo-lens"
version = "1.1.0"
description = "Local-first, read-only Group Policy analysis"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{ name = "hraedon" }]
dependencies = ["defusedxml>=0.7"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.28",
    "types-defusedxml>=0.7",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
]

[project.scripts]
gpo-lens = "gpo_lens.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpo_lens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Local runs are fast by default: parallel (pytest-xdist) and WITHOUT coverage.
# Coverage tracing roughly doubles wall time (measured ~97s -> ~170s here) and
# the --cov-fail-under floor is enforced only in CI (.github/workflows/ci.yml,
# currently 85%) — the synthetic fixture estates (tests/fixtures/ +
# tests/golden_estate/) drive coverage to ~92% without the gitignored samples/
# exports. CI re-adds --cov explicitly. Override -n auto with `-n0` when using
# -s / pdb; add --cov=src locally on demand.
addopts = "-q -n auto"
filterwarnings = [
    "ignore:.*plaintext.*:UserWarning",
    "ignore:Using.*httpx.*starlette.testclient.*deprecated:starlette.exceptions.StarletteDeprecationWarning",
]
markers = [
    "samples: requires real GPO export samples in samples/",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP", "S"]
ignore = [
    "B008",   # function call in default argument (FastAPI Depends pattern)
    "B007",   # unused loop variable (false positives in enumerate)
    "S101",   # assert in tests
    "S310",   # urllib.urlopen (URLs are configured, not user-controlled)
    "S603",   # subprocess call (collector scripts are intentional)
    "S607",   # partial path in subprocess (collector scripts)
    "S608",   # SQL string construction (uses ? placeholders, no user input)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S104", "S105", "S106", "S314"]

[tool.mypy]
python_version = "3.12"
strict = true
